# server/ee/libs/embedded/embedded-execution/embedded-execution-public-rest/generated/src/main/java/com/bytechef/ee/embedded/execution/public_/web/rest/ActionApi.java
@@ -36,7 +36,7 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-07-03T17:58:15.294206+02:00[Europe/Zagreb]", comments = "Generator version: 7.22.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-08-24T22:46:06.978203+02:00[Europe/Zagreb]", comments = "Generator version: 7.22.0")
 @Validated
 @Tag(name = "action", description = "the action API")
 public interface ActionApi {
@@ -104,6 +104,10 @@ public interface ActionApi {
             @ApiResponse(responseCode = "501", description = "Not implemented", content = {
                 @Content(mediaType = "application/json", schema = @Schema(implementation = ExecuteAction400ResponseModel.class))
             })
+        },
+        security = {
+            @SecurityRequirement(name = "jwtBearerAuth"),
+            @SecurityRequirement(name = "bearerAuth")
         }
     )
     @RequestMapping(
